去除文档和配置文件saas字杨

--- a/算力中心部署说明.md
+++ b/算力中心部署说明.md
@@ -56,7 +56,7 @@ yum install -y yum-utils device-mapper-persistent-data lvm2
 yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo
 yum install -y docker-ce
 
-# 调整docker镜像、容器的存储位置（用于挂载了数据盘的服务器）
+# 调整docker镜像、容器的存储位置（用于已经挂载数据盘的服务器）
 mv /var/lib/docker /bsn/docker
 mv /var/lib/docker /bsn/docker
 ln -s /bsn/docker /var/lib/docker
@@ -86,8 +86,8 @@ echo "/dev/sdb1 /bsn xfs defaults 0 0" >> /etc/fstab
 | nacos |        微服务      | Oracle JDK11  x64 |
 | ddc-opsjob |        运营job      | Oracle JDK11  x64 |
 | ddc-auth |   运营权限服务 | Oracle JDK11  x64          |
-| ddc-swap-api |交易服务     | Oracle JDK11  x64         |
-| ddc-swap-job |交易job服务  | Oracle JDK11  x64         |
+| ddc-ddc-swap-api |交易服务     | Oracle JDK11  x64         |
+| ddc-ddc-swap-job |交易job服务  | Oracle JDK11  x64         |
 | ddc-base |基础服务  | Oracle JDK11  x64         |
 | ddc-account |帐户服务  | Oracle JDK11  x64         |
 | ddc-ops |运营系统后端服务  | Oracle JDK11  x64         |
@@ -249,7 +249,7 @@ curl -X POST 'http://{NACOS-HOST}:8848/nacos/v1/console/namespaces' -d 'customNa
 
 | 配置名称 | 配置说明 |
 | -------- | ------------ |
-| ddc-swap-job.yaml | 交易服务定时配置 |
+| ddc-ddc-swap-job.yaml | 交易服务定时配置 |
 | system-config.yaml | 全局属性 |
 | ddc_server_port_default.yml | 服务端口配置 |
 | redis-common.yaml | redis配置 |
@@ -391,19 +391,18 @@ docker-compose up -d
 #### 4.7.1. 服务目录结构
 - 链服务启动文件：[ChainSrv](https://github.com/BSN-DDC/computingpower/tree/main/deployPackageAndConfiguration/config-files/dockerAndShell/Chain-Srv)
 ```shell
-# 链服务目录结构，解压后自然生成
-tar -xzvf ChainService.tar.gz
-taianchain-ddc-service
+# 链服务目录结构
+ddc-chainsrv-taian
 ├── docker-compose.yml
 ├── pkg
 └── script
     └── start.sh
-wenchangchain-ddc-service
+ddc-chainsrv-wenchang
 ├── docker-compose.yml
 ├── pkg
 └── script
     └── start.sh
-zhongyichain-ddc-service
+ddc-chainsrv-zhongyi
 ├── docker-compose.yml
 ├── pkg
 └── script
@@ -518,35 +517,34 @@ docker build -t java11-cn:11.0.16.1 .
 ```shell
 # 创建日志路径
 mkdir -p /bsn/ddclogs
-tar -xzvf ChainService.tar.gz
-# 如下是整个微服务后端的目录结构，解压ChainService.tar.gz后自动生成，pkg目录需要创建
+# 如下是整个微服务后端的目录结构，pkg目录需要创建
 # 创建用于存放微服务jar包的目录
-mkdir -p /bsn/{account-ddc,base-ddc,ops-ddc,opsauth-ddc,opsjob-ddc,portal-ddc,swap-api,swap-job}/pkg
+mkdir -p /bsn/{ddc-account,ddc-base,ddc-ops,ddc-auth,ddc-opsjob,ddc-portal,ddc-swap-api,ddc-swap-job}/pkg
 tree -L 2 /bsn
 bsn
-├── account-ddc
+├── ddc-account
 │   ├── pkg
 │   └── script
-├── base-ddc
+├── ddc-base
 │   ├── pkg
 │   └── script
 ├── ddclogs
-├── opsauth-ddc
+├── ddc-auth
 │   ├── pkg
 │   └── script
-├── ops-ddc
+├── ddc-ops
 │   ├── pkg
 │   └── script
-├── opsjob-ddc
+├── ddc-opsjob
 │   ├── pkg
 │   └── script
-├── portal-ddc
+├── ddc-portal
 │   ├── pkg
 │   └── script
-├── swap-api
+├── ddc-swap-api
 │   ├── pkg
 │   └── script
-└── swap-job
+└── ddc-swap-job
     ├── pkg
     └── script
 ```
@@ -571,7 +569,7 @@ Please enter the nacos server port: <nacos服务器web端口>
 #切换到单独微服务
 #创建docker-compose.yaml文件
 cat >> docker-compose.yaml <<EOF
-# <service_name> 服务名称例如ops-ddc
+# <service_name> 服务名称例如ddc-ops
 version: "3"
 services:
   ddc-<service_name>-service:
@@ -625,7 +623,7 @@ docker-compose up -d
 
 ```shell
 # 目录结构
-saasapi-ddc/
+ddc-oai/
 ├── docker-compose.yml
 ├── pkg
 ├── logs
@@ -688,7 +686,7 @@ operesty-nginx
 ├── ssl
 └── stream
     ├── jsonlog.lua
-    ├── openapi-saas.conf
+    ├── openapi.conf
     ├── operation.conf
     ├── portal.conf
     ├── share-proxy.conf
@@ -704,7 +702,7 @@ operesty-nginx
 # 若有SSL证书和域名的情况下端口可统一配置443，通过server_name进行区分服务
 # 三个服务配置都有80重定向443，根据实际需求开启
 
-operesty-nginx/stream/{operation.conf,portal.conf,openapi-saas.conf}
+operesty-nginx/stream/{operation.conf,portal.conf,openapi.conf}
 # server{
 #    listen 80;
 #    server_name  xxx.xxx.com;
@@ -729,7 +727,7 @@ server {
 #   server_name  xxxx.portal.com;
 ...
 
-operesty-nginx/stream/openapi-saas.conf
+operesty-nginx/stream/openapi.conf
 server {
   # listen       443 ssl; 
   listen       82;
