--- a/算力中心部署说明.md
+++ b/算力中心部署说明.md
@@ -413,7 +413,7 @@ ddc-chainsrv-zhongyi
 - [oraclejdk8下载地址【官方地址】](https://www.oracle.com/java/technologies/downloads/#java8)
 
 ##### 4.7.2.1. JDK8镜像准备
-
+- jdk镜像内要安装**中文语言**环境，防止**运营**、**门户**管理系统页面**乱码**
 ```shell
 # 准备jdk文件，以下文件测试实际可用
 jdk-8u351-linux-x64.tar.gz
@@ -484,6 +484,7 @@ docker-compose up -d
 #### 4.8.1. docker镜像准备
 - [oraclejdk11下载地址【官方地址】](https://www.oracle.com/java/technologies/javase/jdk11-archive-downloads.html)
 ##### 4.8.1.1. JDK11镜像准备
+- jdk镜像内要安装**中文语言**环境，防止**运营**、**门户**管理系统页面**乱码**
 ```shell
 # 准备jdk文件，以下版本经过测试实际可用
 jdk-11.0.16.1_linux-x64_bin.tar.gz
