--- a/算力中心部署说明.md
+++ b/算力中心部署说明.md
@@ -257,10 +257,10 @@ curl -X POST 'http://{NACOS-HOST}:8848/nacos/v1/console/namespaces' -d 'customNa
 | ddc-web-common.yml | 门户，运营服务配置 |
 | ddc-web-sftp.yml | sftp配置 |
 | ddc-web-email.yml | 邮件服务配置 |
-| kong-gateway-config.yml | 节点网关客户端配置；  注意： |
+| kong-gateway-config.yml | 节点Kong网关客户端配置； |
 | ddc-chainsrv-{链名称全拼}.yaml | 链服务配置： |
 
-kong客户单配置可以从nacos或者运营系统修改。kong-gateway-config.yml
+节点Kong网关客户端配置可以从nacos或者运营系统修改。kong-gateway-config.yml
 
 ```yaml
 nacos:  
